# streamlit_salesforce_data

./: README.md  SalesforceHelper.py  config.demo.yml  pyproject.toml  sf_offload_objects.py  sf_offload_objects_selection.py  streamlit_app.py
.streamlit/: config.toml
offload/: sf_tables_inBigQuery.sql  sf_tables_to_offload.py
pages/: streamlit_home.py  streamlit_sf_dropOrDesactive.py  streamlit_sf_update.py
